--- a/style.css
+++ b/style.css
@@ -11,10 +11,10 @@ html,
 body {
   height: 100%;
   width: 100%;
+  overflow: hidden;
 }
 
 #main {
-  
   height: 100%;
   width: 100%;
   background-color: antiquewhite;
